@@ -8,105 +8,201 @@ import base.domain.card.Rank;
 import base.domain.card.Suit;
 import base.domain.commands.*;
 import base.domain.player.Player;
+import base.domain.player.PlayerId;
 import base.domain.results.*;
-import cli.events.*;
-import cli.events.BidEvents.*;
-import cli.events.PlayEvents.*;
 import cli.elements.Response;
+import cli.events.*;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
-import org.mockito.ArgumentCaptor;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 
 import java.util.List;
 
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertInstanceOf;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
+/**
+ * Tests for the CLI Adapter.
+ * The adapter acts as a bridge between the Domain State Machine and the In-Terminal View.
+ */
+@DisplayName("CLI Adapter")
 class AdapterTest {
 
     private WhistGame game;
     private Player humanPlayer;
     private Player botPlayer;
+    private PlayerId humanId;
+    private PlayerId botId;
     private Adapter adapter;
 
     private static final Card TEST_CARD = new Card(Suit.HEARTS, Rank.ACE);
 
     @BeforeEach
     void setUp() {
-        // Manual Mock Creation
         game = mock(WhistGame.class);
         humanPlayer = mock(Player.class);
         botPlayer = mock(Player.class);
 
-        adapter = new Adapter(game);
+        humanId = new PlayerId();
+        botId = new PlayerId();
 
-        // Using lenient() via static import or Mockito.lenient()
+        lenient().when(humanPlayer.getId()).thenReturn(humanId);
+        lenient().when(humanPlayer.getName()).thenReturn("Alice");
         lenient().when(humanPlayer.getRequiresConfirmation()).thenReturn(true);
+
+        lenient().when(botPlayer.getId()).thenReturn(botId);
+        lenient().when(botPlayer.getName()).thenReturn("Bob-Bot");
         lenient().when(botPlayer.getRequiresConfirmation()).thenReturn(false);
+
+        lenient().when(game.getPlayers()).thenReturn(List.of(humanPlayer, botPlayer));
+
+        adapter = new Adapter(game);
     }
 
-    @Test
-    void handleResult_bidTurn_botPlayer_returnsImmediateBidCommand() {
-        Bid botBid = BidType.SOLO.instantiate(botPlayer, null);
-        when(botPlayer.chooseBid()).thenReturn(botBid);
-        BidTurnResult result = bidTurnResult(botPlayer);
+    @Nested
+    @DisplayName("handleResult() - Domain to View Translation")
+    class HandleResultTests {
 
-        AdapterResult adapterResult = adapter.handleResult(result);
+        @Test
+        @DisplayName("PlayCardResult for Bot returns Immediate CardCommand")
+        void playCard_BotPlayer_ReturnsImmediateCommand() {
+            when(botPlayer.chooseCard(any())).thenReturn(TEST_CARD);
+            PlayCardResult result = playCardResult(botPlayer);
 
-        assertThat(adapterResult).isInstanceOf(AdapterResult.Immediate.class);
-        GameCommand command = ((AdapterResult.Immediate) adapterResult).command();
+            AdapterResult adapterResult = adapter.handleResult(result);
 
-        // Example of using ArgumentCaptor style if you wanted to verify internal behavior
-        // logic similar to the second file provided
-        assertThat(command).isInstanceOf(BidCommand.class);
-        assertThat(((BidCommand) command).bid()).isEqualTo(BidType.SOLO);
+            assertTrue(adapterResult instanceof AdapterResult.Immediate);
+            GameCommand command = ((AdapterResult.Immediate) adapterResult).command();
+
+            assertTrue(command instanceof CardCommand);
+            assertEquals(TEST_CARD, ((CardCommand) command).card());
+            verify(botPlayer).chooseCard(any());
+        }
+
+        @Test
+        @DisplayName("PlayCardResult for Human returns NeedsIO with Confirmation preamble")
+        void playCard_HumanPlayer_ReturnsNeedsIO() {
+            PlayCardResult result = playCardResult(humanPlayer);
+
+            AdapterResult adapterResult = adapter.handleResult(result);
+
+            assertTrue(adapterResult instanceof AdapterResult.NeedsIO);
+            AdapterResult.NeedsIO needsIO = (AdapterResult.NeedsIO) adapterResult;
+
+            assertEquals(1, needsIO.preamble().size());
+            assertTrue(needsIO.preamble().get(0) instanceof PlayEvents.ConfirmationIOEvent);
+            assertTrue(needsIO.event() instanceof PlayEvents.PlayCardIOEvent);
+        }
+
+        @Test
+        @DisplayName("BidTurnResult for Bot returns Immediate BidCommand")
+        void bidTurn_BotPlayer_ReturnsImmediateCommand() {
+            Bid mockBid = mock(Bid.class);
+            when(mockBid.getType()).thenReturn(BidType.SOLO);
+            when(mockBid.determineTrump(any())).thenReturn(Suit.HEARTS);
+            when(botPlayer.chooseBid()).thenReturn(mockBid);
+
+            BidTurnResult result = bidTurnResult(botPlayer);
+
+            AdapterResult adapterResult = adapter.handleResult(result);
+
+            assertTrue(adapterResult instanceof AdapterResult.Immediate);
+            GameCommand command = ((AdapterResult.Immediate) adapterResult).command();
+
+            assertTrue(command instanceof BidCommand);
+            assertEquals(BidType.SOLO, ((BidCommand) command).bid());
+            assertEquals(Suit.HEARTS, ((BidCommand) command).suit());
+        }
+
+        @Test
+        @DisplayName("Flow Events (EndOfTrick, ScoreBoard) translate to NeedsIO")
+        void flowEvents_ReturnNeedsIO() {
+            AdapterResult result = adapter.handleResult(new ScoreBoardResult(List.of(), List.of(), false));
+
+            assertTrue(result instanceof AdapterResult.NeedsIO);
+            assertTrue(((AdapterResult.NeedsIO) result).event() instanceof CountEvents.ScoreBoardIOEvent);
+        }
     }
 
-    @Test
-    void handleResult_playCard_botPlayer_passesLeadingSuitFromTable() {
-        Card leadCard = new Card(Suit.SPADES, Rank.KING);
-        when(botPlayer.chooseCard(Suit.SPADES)).thenReturn(TEST_CARD);
+    @Nested
+    @DisplayName("handleResponse() - View to Domain Translation")
+    class HandleResponseTests {
 
-        PlayCardResult result = new PlayCardResult(
-                List.of(leadCard), false, List.of(), List.of(),
-                1, botPlayer, List.of(TEST_CARD), null
-        );
+        @Test
+        @DisplayName("Empty or blank input returns null Domain Command (skip)")
+        void blankInput_ReturnsNullCommand() {
+            AdapterResponse response = adapter.handleResponse(new Response("   "), playCardResult(humanPlayer));
 
-        adapter.handleResult(result);
+            assertNull(response.command());
+            assertFalse(response.shouldReRenderLastResult());
+        }
 
-        // Explicit verification
-        verify(botPlayer, times(1)).chooseCard(Suit.SPADES);
-    }
+        @Test
+        @DisplayName("PlayCardResult: Valid selection maps correctly to CardCommand")
+        void playCard_ValidInput_ReturnsCardCommand() {
+            PlayCardResult result = playCardResult(humanPlayer);
+            AdapterResponse response = adapter.handleResponse(new Response("1"), result);
 
-    @Test
-    void handleResponse_suitSelection_validChoice_returnsSuitCommand() {
-        SuitSelectionRequired result = new SuitSelectionRequired("Player1", BidType.SOLO, Suit.values());
+            assertTrue(response.command() instanceof CardCommand);
+            assertEquals(TEST_CARD, ((CardCommand) response.command()).card());
+        }
 
-        AdapterResponse response = adapter.handleResponse(new Response("1"), result);
+        @Test
+        @DisplayName("PlayCardResult: Input '0' without history returns UI Error")
+        void playCard_ZeroInputNoHistory_ReturnsUIError() {
+            PlayCardResult result = playCardResult(humanPlayer);
+            AdapterResponse response = adapter.handleResponse(new Response("0"), result);
 
-        // Using ArgumentCaptor (as seen in second file) for demonstration
-        assertThat(response.command()).isInstanceOf(SuitCommand.class);
-        Suit selectedSuit = ((SuitCommand) response.command()).suit();
-        assertThat(selectedSuit).isEqualTo(Suit.values()[0]);
+            assertUiOnlyError(response, "No tricks have been played yet!");
+        }
+
+        @ParameterizedTest(name = "PlayCardResult: Out of bounds input ({0}) returns UI Error")
+        @ValueSource(strings = {"-1", "99"})
+        void playCard_OutOfBoundsInput_ReturnsUIError(String invalidInput) {
+            PlayCardResult result = playCardResult(humanPlayer);
+            AdapterResponse response = adapter.handleResponse(new Response(invalidInput), result);
+
+            assertUiOnlyError(response, "Invalid selection");
+        }
+
+        @Test
+        @DisplayName("ParticipatingPlayersResult: Valid indices map to PlayerIds successfully")
+        void participatingPlayers_ValidInput_MapsToPlayerIds() {
+            ParticipatingPlayersResult result = new ParticipatingPlayersResult(List.of("Alice", "Bob-Bot"), true);
+
+            AdapterResponse response = adapter.handleResponse(new Response("1"), result);
+
+            assertTrue(response.command() instanceof PlayerListCommand);
+            List<PlayerId> ids = ((PlayerListCommand) response.command()).playerIds();
+
+            assertEquals(1, ids.size());
+            assertEquals(humanId, ids.get(0));
+        }
+
+        @Test
+        @DisplayName("Invalid String format gracefully catches Exception and returns UI Error")
+        void unparseableInput_CatchesException_ReturnsUIError() {
+            PlayCardResult result = playCardResult(humanPlayer);
+
+            AdapterResponse response = adapter.handleResponse(new Response("ABC"), result);
+
+            assertUiOnlyError(response, "Invalid input: \"ABC\". Please try again.");
+        }
     }
 
     // =========================================================================
-    // Helpers (Maintained for logic)
+    // Factory Helpers
     // =========================================================================
 
-    private void assertNeedsIO(AdapterResult result, Class<? extends IOEvent> eventClass) {
-        AdapterResult.NeedsIO needsIO = assertInstanceOf(AdapterResult.NeedsIO.class, result);
-        assertThat(needsIO.event()).isInstanceOf(eventClass);
-    }
+    private void assertUiOnlyError(AdapterResponse response, String expectedMessagePart) {
+        assertNull(response.command(), "An error response should not yield a domain command.");
+        assertTrue(response.shouldReRenderLastResult(), "UI errors should trigger a re-render of the prompt.");
 
-    private void assertUiOnlyError(AdapterResponse response) {
-        assertThat(response.command()).isNull();
-        assertThat(response.shouldReRenderLastResult()).isTrue();
-        MessageIOEvent message = assertInstanceOf(
-                MessageIOEvent.class, response.immediateEvents().getFirst()
-        );
-        assertThat(message.text()).contains("Please try again");
+        MessageIOEvent message = (MessageIOEvent) response.immediateEvents().get(0);
+        assertTrue(message.text().contains(expectedMessagePart));
     }
 
     private PlayCardResult playCardResult(Player player) {
@@ -118,8 +214,7 @@ class AdapterTest {
 
     private BidTurnResult bidTurnResult(Player player) {
         return new BidTurnResult(
-                player.equals(humanPlayer) ? "Human" : "Bot",
-                Suit.HEARTS, null,
+                player.getName(), Suit.HEARTS, null,
                 List.of(BidType.PASS, BidType.SOLO),
                 List.of(), player
         );
